# infinite-canvas-tutorial

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh_CN.md  eslint.config.js  jest.config.js  jest.ecs.config.js  package.json  playwright.config.ts  playwright.config.ui.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.js  zbpack.json
.changeset/: config.json  pre.json  purple-ties-film.md
.github/: FUNDING.yml
.github/workflows/: build.yml  ct-web.yml  deploy.yml  e2e.yml  preview.yml  production.yml  publish.yml  test.yml  unit-ssr.yml  unit_ssr.yml
__tests__/: Untitled (2).fig  jest-pretext-canvas.js  toMatchSVGSnapshot.ts  toMatchWebGLSnapshot.ts  useSnapshotMatchers.ts  utils.ts
__tests__/e2e/: config.json  suite.spec.ts  visualization.webgl2.test.ts  visualization.webgpu.test.ts
__tests__/ecs/: animation.spec.ts  app.spec.ts  attenuation.spec.ts  bindings-constraint.spec.ts  bindings-ellipse.spec.ts  bindings-orthogonal.spec.ts  bindings-route-bezier.spec.ts  bindings-route-curved.spec.ts  bindings-route-orthconnector.spec.ts  bindings-route-rounded.spec.ts  bindings.spec.ts  bitmap-font.abstract-bitmap-font.spec.ts  bitmap-font.bitmap-font.spec.ts  bitmap-font.json-parser.spec.ts  bitmap-font.load-bitmap-font.spec.ts  bitmap-font.text-parser.spec.ts  bitmap-font.xml-parser.spec.ts  bitmap-font.xml-string-parser.spec.ts  blend-mode.spec.ts  clipmode.clip.spec.ts  clipmode.erase.spec.ts  clipmode.soft.spec.ts  codegen.spec.ts  coordinates.spec.ts  cube-geometry.ts  cube.spec.ts  (+134 more)
docs/: FRAME_FEATURE_DESIGN.md  README.md  rc-gi-implementation.md  running-ecs-tests.md
patches/: @antv+g-device-api@1.6.13.patch  @lit+localize-tools@0.8.1.patch
playwright/: index.html
rust/: Cargo.toml  README.md  index.html
rust/glsl-wgsl-compiler/: Cargo.toml
rust/glsl-wgsl-compiler/pkg/: glsl_wgsl_compiler.d.ts  glsl_wgsl_compiler.js  glsl_wgsl_compiler_bg.wasm  glsl_wgsl_compiler_bg.wasm.d.ts  package.json
rust/glsl-wgsl-compiler/src/: lib.rs
rust/pkg/: README.md  package.json  vello_renderer.d.ts  vello_renderer.js  vello_renderer_bg.wasm  vello_renderer_bg.wasm.d.ts
rust/src/: brush_pass.rs  grid_pass.rs  lib.rs  multi_touch.rs  path_utils.rs  rc_cascade_math.rs  rc_pass.rs  renderer.rs  scene.rs  sdf_primitives.rs  state.rs  text.rs  types.rs  wasm_api.rs  watercolor.rs
rust/vello-renderer/pkg/: package.json  vello_renderer.d.ts  vello_renderer.js  vello_renderer_bg.wasm  vello_renderer_bg.wasm.d.ts
rust/vello-renderer/src/: brush_pass.rs  grid_pass.rs  lib.rs  path_utils.rs  rc_pass.rs  scene.rs  sdf_primitives.rs  text.rs  types.rs  vector_network.rs  wasm_api.rs
screenshots/: glitch.webm
scripts/: migrate-site-vue-fills.mjs
(+81 files in other folders)
